--- a/src/components/styles/project-card.scss
+++ b/src/components/styles/project-card.scss
@@ -28,15 +28,15 @@ $black-weight:    900;
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(1fr, 4);
     grid-gap: 1em;
     grid-auto-rows: minmax(10px, auto);
     font-family: 'Lato Light', sans-serif;
-    font-size: 16px;
+    font-size: 25px;
     color: $color-psi;
     background-color: $color-alpha;
     letter-spacing: 0;
     text-align: left;
+    justify-content: center;
     line-height: 25px;
     overflow: hidden;
     padding-top: 3em;
@@ -45,8 +45,8 @@ $black-weight:    900;
 
 #images {
     transition: transform .5s cubic-bezier(0.84, 0.01, 0.4, 0.99);
-    max-width: 500px;
-    max-height: 400px;
+    max-width: 1000px;
+    max-height: 800px;
 }
 
 #images:hover {
@@ -55,8 +55,8 @@ $black-weight:    900;
 
 .nested {
     display: grid;
-    grid-template-columns: 1fr 3fr 5fr;
-    max-width: 400px;
+    grid-template-columns: 1fr 4fr 5fr;
+    max-width: 1000px;
 }
 
 .nested #numbers {
@@ -83,16 +83,107 @@ $black-weight:    900;
 
 .nested #titles {
     font-family: 'Baskervville', serif;
-    font-size: 15px;
+    font-size: 30px;
+    letter-spacing: 0.125rem;
     font-weight: $normal-weight;
     text-transform: uppercase;
-    letter-spacing: 0.0675rem;
+    line-height: 1.5em;
 }
 
 .nested #description {
     font-family: 'Lato Light', sans-serif;
-    font-size: 12px;
+    font-size: 20px;
+    letter-spacing: 0.125rem;
     font-weight: $normal-weight;
-    letter-spacing: 0.0675rem;
     color: $color-gamma;
+}
+
+/* Media Query */
+
+// Xiaomi Redmi 8 Note Pro
+@media only screen and (min-width: 393px) and (orientation: portrait) { 
+    /* Your Styles... */ 
+
+}
+
+// Samsung A50
+@media only screen and (min-width: 412px) and (orientation: portrait) { 
+  /* Your Styles... */ 
+
+}
+
+// iPhone 6 and 7
+@media only screen and (min-width: 375px) and (orientation: portrait) { 
+  /* Your Styles... */ 
+  .wrapper {
+        grid-template-columns: none;
+        font-size: 16px;
+   }
+
+   .nested {
+        grid-template-columns: 1fr 3fr 5fr;
+        max-width: 400px;
+   }
+
+  .ProjectCards {
+
+    #description {
+        font-size: 12px;
+        letter-spacing: 0.0675rem;
+        max-width: 175px;
+    }
+    
+    #images {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+
+    #titles {
+        font-size: 15px;
+        letter-spacing: 0.0675rem;
+        max-width: 110px;
+    }
+  }
+}
+
+// iPad Pro
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+  .wrapper {
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+      grid-gap: 1.5em;
+      font-size: 20px;
+  }
+  
+  #images {
+      max-width: 500px;
+      max-height: 400px;
+  }
+  
+  .nested {
+      display: grid;
+      grid-template-columns: 1fr 3fr 5fr;
+      max-width: 500px;
+      grid-gap: 1em;
+  }
+  
+  .nested #titles {
+      font-size: 25px;
+      letter-spacing: 0.125rem;
+      max-width: 85%;
+  }
+  
+  .nested #description {
+      max-width: 85%;
+      font-size: 20px;
+      letter-spacing: 0.0625rem;
+  }
+
 }
