--- a/src/components/styles/project.scss
+++ b/src/components/styles/project.scss
@@ -29,78 +29,3 @@ $black-weight:    900;
 .body {
     background-color: $color-alpha;
 }
-
-/* Media Query */
-
-// Xiaomi Redmi 8 Note Pro
-@media only screen and (min-width: 393px) and (orientation: portrait) { 
-    /* Your Styles... */ 
-
-}
-
-// Samsung A50
-@media only screen and (min-width: 412px) and (orientation: portrait) { 
-  /* Your Styles... */ 
-
-}
-
-// iPhone 6 and 7
-@media only screen and (min-width: 375px) and (orientation: portrait) { 
-  /* Your Styles... */ 
-  .ProjectCards {
-
-    #description {
-        max-width: 175px;
-    }
-    
-    #images {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;
-    }
-
-    #titles {
-        max-width: 110px;
-    }
-  }
-}
-
-// iPad Pro
-@media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
-
-  .wrapper {
-      grid-template-columns: repeat(2, 1fr);
-      grid-auto-rows: minmax(100px, auto);
-      grid-gap: 3em;
-      font-size: 25px;
-  }
-  
-  #images {
-      max-width: 500px;
-      max-height: 400px;
-  }
-  
-  .nested {
-      display: grid;
-      max-width: 500px;
-      grid-gap: 1em;
-  }
-  
-  .nested #titles {
-      font-size: 25px;
-      letter-spacing: 0.125rem;
-      max-width: 300px;
-  }
-  
-  .nested #description {
-      max-width: 700px;
-      font-size: 20px;
-      letter-spacing: 0.125rem;
-  }
-
-}
